Updated "baseurl" and "url" in config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ name: SmallTabs Styleguide
 markdown: redcarpet
 pygments: true
 permalink: none
-baseurl: "mesker.github.io/smalltabs"
-url: http://localhost:4000
+baseurl: "mesker.github.io"
+url: /smalltabs
