--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ name: SmallTabs Styleguide
 markdown: redcarpet
 pygments: true
 permalink: none
-url: mesker.github.io/smalltabs
+baseurl:     /
+url:         http://localhost:4000
