--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ name: SmallTabs Styleguide
 markdown: redcarpet
 pygments: true
 permalink: none
-baseurl:     /
-url:         http://mesker.github.io/smalltabs
+baseurl: /smalltabs
+url: http://localhost:4000
